2015-02-05  Vincent Bernat  <bernat@luffy.cx>  (tiny change)

	* nnimap.el (nnimap-request-group-scan): Fix the function name.

	* gnus-int.el (gnus-request-group-scan): Use the correct function name.

2015-02-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-select-newsgroup): Pass the group info along so
	that nnimap works for non-activated backends.

2015-02-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-with-unibyte-current-buffer): Don't emit a warning
	message, since we already get an obsolescence message.  Use `declare'.

2015-02-04  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* nnir.el: Revert "Enable non-ASCII IMAP searches".

2015-01-30  Glenn Morris  <rgm@gnu.org>

	* gnus-registry.el (gnus-registry-max-pruned-entries)
	(gnus-registry-prune-factor, gnus-registry-default-sort-function):
	Fix :version.
	(gnus-registry-default-sort-function): Improve :type.

2015-01-29  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-group): Allow running this function on
	groups that don't exist in Gnus yet.
	(nnimap-request-group): Revert previous patch since that made it
	impossible to enter nnimap groups.

	* message.el (message-smtpmail-send-it): Remove the mail header
	separator before sending.

2015-01-28  Elias Oltmanns  <eo@nebensachen.de>

	* nnimap.el (nnimap-find-expired-articles): Fix handling of
	(expiry-wait . never).

2015-01-28  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-group): Clear the buffer before returning
	the data.

2015-01-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-compat.el (string-bytes): Work for XEmacs.

2015-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el (string-bytes): Avoid compilation error on XEmacs.

	* nnir.el (nnir-imap-expr-to-imap): Check for literal+ capability in
	IMAP.

2015-01-27  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* nnir.el (nnir-run-imap): Enable non-ASCII IMAP searches.
